# Python-Zork

./: .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  IMPROVEMENTS.md  Makefile  README.md  TODO.md  coderefactor.txt  game.py  index.html  main.py  map.py  minigames.py  newlook.txt  package-lock.json  package.json  player.py  pyproject.toml  requirements.txt  room.py  saveload.py  server.py  setup.cfg  setup.py  test_minigame.py  visualizer.py  vite.config.ts
archive/: game.py  introimprovements.txt  player.py  room.py  saveload.py
archive/features_added/: asciimap.txt  componentvisual.txt  help.txt  newfeatures.txt  saveload.txt  updatedmap.txt  visualizer.txt
computerquest/: __init__.py  commands.py  config.py  game.py
computerquest/mechanics/: __init__.py  progress.py
computerquest/mechanics/minigames/: __init__.py
computerquest/models/: component.py  player.py
computerquest/utils/: helpers.py  map_renderer.py
computerquest/world/: __init__.py  architecture.py
data/: component_data.json  items_data.json  virus_data.json
features_added/: Updatededucationcontent.txt  playerclass.txt  progresstracking.txt  sampleminigame.txt
src/: App.tsx  index.css
src/components/: GameMap.tsx
tests/: __init__.py  run_tests.py  test_architecture.py  test_commands.py  test_component.py  test_game.py  test_helpers.py  test_player.py  test_progress.py
